fixed an issue with white spacing between the footer social links and any seection above

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,7 +112,6 @@
 
 .sociallinks{
     background-image: linear-gradient(-90deg, black, #001684);
-    margin-top: 100px;
 }
 
 .footerbg{
